<resources>
    <string name="app_name">BinListApp</string>
    <string name="request_history">Request history</string>
    <string name="input_bin">Enter the first digits of a card number (BIN/IIN)</string>
    <string name="get">Get</string>
    <string name="toast_message">BIN can not be empty</string>
    <string name="coordinates">(latitude: <b>%1$s</b>, longitude: <b>%2$s</b>)</string>
    <string name="prepaid">PREPAID</string>
    <string name="luhn">LUHN</string>
    <string name="length">LENGTH</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="country">COUNTRY</string>
    <string name="brand">BRAND</string>
    <string name="type">TYPE</string>
    <string name="scheme_network">SCHEME / NETWORK</string>
    <string name="bank">BANK</string>
    <string name="clear_request_history">Clear request history</string>
</resources>